--- a/source/sample.ini
+++ b/source/sample.ini
@@ -1,27 +1,20 @@
-[Settings.Debug]
+[Debug]
 bEnableConsoleWindow = false
 bPauseOnStart = false
 bDebug = false
-bAllowNonMK = false
 
 [Settings]
 iLogSize = 100
-iLogLevel = 0
+iLogLevel = 10
 
 [Patches.AntiCheat]
 bDisableSignatureCheck = true
-bDisableChunkSigCheck = true
-bDisableTOCSigCheck = true
-bDisablePakTOCCheck = true
 
 [Patterns]
-pSigCheck = 80 b9 ? ? ? ? 00 49 8b f0 48 8b fa 48 8b d9 75
-pSigWarn = 4c 03 f1 80 3D ? ? ? ? 03 0f 82
-pTocCheck = 4D 8B CE 45 33 C0 E8 ? ? ? ? 44 39 Bd ? ? ? ? 0F 84
-pPakTocCheck = 49 ? ? ? E8 ? ? ? ? E8 ? ? ? ? 83 78 ? 00 74 ?
-pChunkSigCheck = 0F B6 51 ? 48 8b f1 48 8b 0d ? ? ? ? E8 ? ? ? ? C6 46 ? ? 0F AE F8
-pChunkSigCheckFunc = 48 89 5C 24 ? 48 89 6C 24 ? 48 89 74 24 ? 57 41 56 41 57 48 83 EC 20 48 8D 59 08 49 63 F9 48 8B F1 49 8B E8 48 8B CB 44 0F B6 F2
+pSigCheck = 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 83 EC 28 E8 ? ? ? ? 48 89 05 ? ? ? ? 48 83 C4 28 C3 CC CC CC CC CC CC CC CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC
+pEndpointLoader = 48 8b cb 48 8d 15 ? ? ? ? E8 ? ? ? ? 48 8b 4c 24 ? 48 85 c9 74 05 E8 ? ? ? ? 48 8b c3 48 8b 5c 24
 
-[Keybinds]
-hkMenu = F1
-hkInfo = TAB
+[Server]
+; This proxies only connection to the server. It does not proxy other stuff or connections to WB Network servers.
+bEnableServerProxy = true
+szServerUrl = http://localhost:12181/
