--- a/MVSASI.vcxproj
+++ b/MVSASI.vcxproj
@@ -18,12 +18,10 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="source\dllmain.cpp" />
     <ClCompile Include="source\IniReader.cpp" />
-    <ClCompile Include="source\mk12sdk\sdk.cpp" />
     <ClCompile Include="source\src\eSettingsManager.cpp" />
-    <ClCompile Include="source\src\mk12.cpp" />
-    <ClCompile Include="source\src\mk12hook.cpp" />
-    <ClCompile Include="source\src\mkutils.cpp" />
-    <ClCompile Include="source\src\MK12Unlocker.cpp" />
+    <ClCompile Include="source\src\mvs.cpp" />
+    <ClCompile Include="source\src\mvsi.cpp" />
+    <ClCompile Include="source\src\mvsutils.cpp" />
     <ClCompile Include="source\utils\CPPython\pystring.cpp" />
     <ClCompile Include="source\utils\Patterns.cpp" />
     <ClCompile Include="source\utils\prettyprint.cpp" />
@@ -33,13 +31,10 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="source\includes.h" />
     <ClInclude Include="source\IniReader.h" />
-    <ClInclude Include="source\mk12sdk\sdk.h" />
     <ClInclude Include="source\src\eSettingsManager.h" />
-    <ClInclude Include="source\src\mk12.h" />
-    <ClInclude Include="source\src\mk12hook.h" />
-    <ClInclude Include="source\src\mk12_enums.h" />
-    <ClInclude Include="source\src\mkutils.h" />
-    <ClInclude Include="source\src\MK12Unlocker.h" />
+    <ClInclude Include="source\src\mvs.h" />
+    <ClInclude Include="source\src\mvsi.h" />
+    <ClInclude Include="source\src\mvsiutils.h" />
     <ClInclude Include="source\utils\CPPython\cppython.h" />
     <ClInclude Include="source\utils\CPPython\pystring.h" />
     <ClInclude Include="source\utils\MemoryMgr.h" />
