--- a/source/sample.ini
+++ b/source/sample.ini
@@ -1,20 +1,34 @@
-[Debug]
-bEnableConsoleWindow = false
-bPauseOnStart = false
-bDebug = false
+[Settings.Debug]
+ShowConsole = true
+DebugPause = true
+DebugLogging = true
+NonMVSPatching = false
 
 [Settings]
-iLogSize = 100
-iLogLevel = 10
+LogSize = 100
+LogLevel = 10
+EnableKeyboardHotkeys = true
 
-[Patches.AntiCheat]
-bDisableSignatureCheck = true
+[Settings.Keybinds]
+ToggleMenu = F1
+
+[Patches]
+SunsetDate = true
+PakLoader = true
 
 [Patterns]
-pSigCheck = 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 83 EC 28 E8 ? ? ? ? 48 89 05 ? ? ? ? 48 83 C4 28 C3 CC CC CC CC CC CC CC CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC
-pEndpointLoader = 48 8b cb 48 8d 15 ? ? ? ? E8 ? ? ? ? 48 8b 4c 24 ? 48 85 c9 74 05 E8 ? ? ? ? 48 8b c3 48 8b 5c 24
+SigCheck = 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 83 EC 28 E8 ? ? ? ? 48 89 05 ? ? ? ? 48 83 C4 28 C3 CC CC CC CC CC CC CC CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC
+EndpointLoader = 48 8b cb 48 8d 15 ? ? ? ? E8 ? ? ? ? 48 8b 4c 24 ? 48 85 c9 74 05 E8 ? ? ? ? 48 8b c3 48 8b 5c 24
+ProdEndpointLoader = 49 ? ? 48 8d 15 ? ? ? ? E8 ? ? ? ? 49 ? ? ? ? 00 00 48 8b
+SunsetDate = 48 8d 0d ? ? ? ? e8 ? ? ? ? 83 3D ? ? ? ? FF 75 ? 89 7C
 
-[Server]
-; This proxies only connection to the server. It does not proxy other stuff or connections to WB Network servers.
-bEnableServerProxy = true
-szServerUrl = http://localhost:12181/
+
+[Server.Game]
+; This proxies only connection to the game server.
+Enabled = false
+ServerUrl = http://localhost:12181/
+;szServerUrl = https://dokken-api.wbagora.com.
+[Server.Prod]
+; This proxies only connection to wb network.
+Enabled = false
+ServerUrl = http://127.0.0.1:12181/mitm/WB_PROD/
