--- a/source/sample.ini
+++ b/source/sample.ini
@@ -1,12 +1,12 @@
 [Settings.Debug]
-ShowConsole = true
-DebugPause = true
-DebugLogging = true
+ShowConsole = false
+DebugPause = false
+DebugLogging = false
 NonMVSPatching = false
 
 [Settings]
-LogSize = 100
-LogLevel = 10
+LogSize = 50
+LogLevel = 0
 EnableKeyboardHotkeys = true
 
 [Settings.Keybinds]
@@ -19,6 +19,7 @@ PakLoader = true
 [Features]
 HookUE = true
 Dialog = true
+Notifications = true
 
 [Patterns]
 SigCheck = 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 83 EC 28 E8 ? ? ? ? 48 89 05 ? ? ? ? 48 83 C4 28 C3 CC CC CC CC CC CC CC CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC 48 8D 0D ? ? ? ? E9 ? ? ? ? CC CC CC CC
@@ -37,6 +38,7 @@ DialogParams = 48 89 ? ? ? 48 89 ? ? ? 48 89 ? ? ? 48 89 ? ? ? 41 ? 48 83 ? ? 41
 DialogCallback = E8 ? ? ? ? 48 8D 15 ? ? ? ? 48 8D 4C ? ? E8 ? ? ? ? 4C ? ? ? ? C6 ? ? ? 00 48 8D ? ? ? 49 8B CE
 QuitGameCallback = 40 ? 48 83 ? ? 48 8B ? 48 83 ? ? E8 ? ? ? ? 84 C0 74 19 48 8B ? ? 45 33 C9 45 33 C0
 FighterInstance = 48 8D 05 ? ? ? 00 49 89 ? ? 48 8D ? ? ? ? ? 49 89 ? ? 49 C7 ? ? 00 00 00 00 C7 44 ? ? 08 00 00 10 C7 44 ? ? 08 00 00 00 C7 44 ? ? 70 08 00 00
+Notifications = FF 50 ? F3 0F 10 ? ? ? ? ? 48 8B ? F3 0F ? ? ? E8
 
 [Server.Game]
 ; This proxies only connection to the game server.
